--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
 <body>
     <div id="main">
         <!-- blue start here -->
+        <div id="bod">
+
+      
         <div id="blue">
             <h3>Your Result</h3>
             <div id="score">
@@ -83,6 +86,8 @@
 
         <!-- white ends here -->
     </div>
+
+  </div>
 </body>
 
 </html>
